--- a/public/css/style.css
+++ b/public/css/style.css
@@ -203,3 +203,27 @@ body {
     background-color: #dc3545;
     color: white;
 }
+
+/* nav */
+.page-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+    border-bottom: 2px solid var(--border-color);
+    padding-bottom: 10px;
+}
+
+.page-header h1 {
+    margin: 0;
+}
+
+.btn-primary {
+    background-color: var(--primary-green-dark);
+    color: white;
+    border-color: var(--primary-green-dark);
+}
+.btn-primary:hover {
+    background-color: var(--primary-green);
+    border-color: var(--primary-green);
+}
